--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/login">Login</a></li>
         <li><a href="/signup">Sign up!</a></li>
+        <li><a href="/fulllist">Wishlist</a></li>
       </ul>
     </div>
   </nav>
@@ -60,12 +61,18 @@
   </footer>
   <!-- // footer -->
 
-  <!-- scripts -->
   <script src="https://kit.fontawesome.com/fe613f4734.js"></script>
+  <!-- JQuery Link -->
+      <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <!-- // scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+    <script src="/js/index.js"></script>
+    <script>
+       $(document).ready(function(){
+    $('.modal').modal();
+  });
+    </script>
 </body>
 
 </html>
