--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -68,6 +68,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script src="/js/index.js"></script>
+      <script src="/js/auth.js"></script>
     <script>
        $(document).ready(function(){
     $('.modal').modal();
