--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -1,5 +1,3 @@
-
-
 <nav class="black">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo red-text">wish<b>List</b></a>
@@ -11,36 +9,26 @@
   <!-- main content -->
 
  <main class="container">
-    <div id="errmsg"></div>
+    
     <div class="row">
-        <form id="loginForm" class="col s12" >
-            {{!-- email --}}
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">email</i>
-                    <input id="email" type="email" class="validate">
-                    <label for="email">Email</label>
-                </div>
-            </div>
-            {{!-- password --}}
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">lock</i>
-                    <input id="password" type="password" class="validate">
-                    <label for="password">Password</label>
-                </div>
-            </div>
+        
             {{!-- button --}}
             <div class="row">
                 <div class="col s12 center-align">
-                    <button id="loginBtn" class="btn waves-effect waves-light red darken-4" type="submit"
+                    <button id="loginBtnw" class="btn waves-effect waves-light red darken-4" type="submit"
                         name="action">Log In
                         <i class="material-icons right">send</i>
                     </button>
-                    <p class="lead mt-4">
-                No Account? <a href="/signup">Register</a>
-            </p>
+                    
                 </div>
+               
+                <div class="col s12 center-align">
+                    <button id="signUpBtnw" class="btn waves-effect waves-light" type="submit" name="action">Sign Up!
+                        <i class="material-icons right">send</i>
+                    </button>
+        
+                </div>
+            
             </div>
         </form>
     </div>
